# replicapixel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  _Dockerfile  dockerfile  robots.txt  sitemap.xml
assets/static/css/: custom-dropzone.css  daisy.css  output.css  tailwind.js
assets/static/js/: cookie-consent.css  cookie-consent.js  index.css  index.js  index.min.js  interactions.js  lib.js
assets/views/: 404.html  base.html  base_stripe.html
assets/views/auth/: auth_base.html
assets/views/contacts/: create.html  edit.html  list.html  show.html
assets/views/dashboard/: dashboard_base.html  dashboard_base_extend.html  dashboard_base_extend_partial.html
assets/views/home/: home.html  home2.html  home_partial.html
assets/views/packs/: pack_base.html  pack_hero.html  pack_partial.html
assets/views/payment/: _payment_partial.html  payment.html  payment_base.html  payment_partial.html
assets/views/policies/: cookie-policy.html  model-consent-policy.html  privacy-policy.html  term-conditions.html
assets/views/starter/: starter_base.html
config/: development.yaml  production.yaml  test.yaml
docs/: database.md  git.md  hoppscotch-personal-collections.json  photo-ai.excalidraw  seed.ts  web.md
examples/: playground.rs
frontend/: README.md  bun.lockb  cookie-consent.ts  index.ts  input.css  package.json  tsconfig.json
frontend/lib/: api.ts  createList.ts  dropzone.ts  utils.ts
frontend/lib/type/: ImageGenForm.ts  presignedUrlRequest_type.ts  response.ts  trainingModelForm.ts
migration/: Cargo.toml
migration/hello-prisma/: README.md  package-lock.json  package.json  seed.ts
migration/hello-prisma/prisma/: schema.prisma
migration/prisma/: package-lock.json  package.json
migration/prisma/prisma/: schema.prisma  seed.ts
migration/src/: lib.rs  m20220101_000001_users.rs  m20250401_004001_training_models.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  dashboard.rs  features.rs  home.rs  images.rs  mod.rs  oauth2.rs  packs.rs  payment.rs  policy.rs  settings.rs  starter.rs  training_models.rs  webhooks.rs
src/domain/: active_enums.rs  dashboard_sidebar.rs  error.rs  features.rs  image.rs  mod.rs  packs.rs  response.rs  settings.rs  sitemap.rs  training_models.rs  url.rs  website.rs
src/domain/domain_services/: image_generation.rs  mod.rs
src/initializers/: axum_session.rs  fal_client.rs  mod.rs  redis.rs  s3.rs  stripe.rs  website.rs
src/mailers/: auth.rs  mod.rs  transaction.rs
src/middleware/: cookie.rs
src/models/: feature_request.rs  feature_vote.rs  handled_fal_events.rs  handled_stripe_events.rs  images.rs  mod.rs  notification.rs  o_auth2_sessions.rs  packs.rs  plans.rs  training_models.rs  transactions.rs  user_credits.rs  user_settings.rs  users.rs
src/models/_entities/: _sea_orm_active_enums.rs  feature_request.rs  feature_vote.rs  handled_fal_events.rs  handled_stripe_events.rs  images.rs  mod.rs  notification.rs  o_auth2_sessions.rs  packs.rs  plans.rs  prelude.rs  sea_orm_active_enums.rs  training_models.rs  transactions.rs  user_credits.rs  user_settings.rs  users.rs
src/models/join/: mod.rs  user_credits_models.rs  user_image.rs  user_order.rs  user_pack.rs
src/service/: mod.rs
src/service/aws/: s3.rs
src/service/fal_ai/: mod.rs  (+1 more)
src/views/: auth.rs  dashboard.rs  features.rs  home.rs  images.rs  mod.rs  packs.rs  payment.rs  policy.rs  settings.rs  starter.rs  training_models.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
(+231 files in other folders)
