[workspace]

[package]
name = "replicapixel"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "replicapixel-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
# unused = {level = "allow", priority = -1 } # For exploratory development

[workspace.dependencies]
loco-rs = { version = "0.15" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.8", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" , features = ["derive"] }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }

# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = { version = "0.9.4" }

# /view engine
axum-extra = { version = "0.10", features = ["typed-header","form", "cookie-private"] }

# Integrations
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.48.0", features = ["behavior-version-latest"] }
# async-stripe = { version = "0.40.2", features = ["runtime-tokio-hyper"] }
futures = "0.3.31"

derive_more = { version = "2.0.1", features = ["full"] }
thiserror = "2.0.12"
cuid2 = "0.1.3"
reqwest = { version = "0.12.14", features = ["json"] } 
strum = { version =  "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
rand = "0.9.0"
dotenvy = "0.15.7"
secrecy = "0.10.3"
serde-aux = "4.6.0"
rust_decimal = { version = "1.37.1", features = ["macros"] }

# Redis
redis = { version = "0.29.5", features = ["tokio-native-tls-comp" ,"aio","connection-manager"] }

# Validation
unicode-segmentation = "1.11.0"

# For DockerImage Image
openssl = { version = "0.10.71", features = ["vendored"] }
axum_session = "0.16.0"
time = "0.3.41"
oauth2 =  {version = "4.0.0", features = [] }
hyper = {version = "0.14", features = ["full"] }
# url = "2.5.4"
# once_cell = "1"

# Cookie
futures-util = "0.3.31"
tower = "0.5.2"
urlencoding = "2.1.3"
passwords = "3.1.16"
loco-oauth2 = "0.4.1"
google-oauth = "1.11.3"
sitemap = "0.4.1"

[dependencies.async-stripe]
version = "0.40.2" # Use the version you need
default-features = false # VERY IMPORTANT: Start fresh
features = [
    # Core Runtime & HTTP client
    "runtime-tokio-hyper",
    # For handling webhook events and signature verification
    "webhook-events", # Implies "events", pulls in crypto like hmac, sha2, hex
    # For Checkout Session create/retrieve
    "checkout",
    # For Customer create/retrieve
    "connect",
    # For compatibility with types used
    "uuid",
    "chrono",
]

[[bin]]
name = "replicapixel-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
